Removing private data

--- a/config/falcon.ini
+++ b/config/falcon.ini
@@ -9,6 +9,6 @@ application->throwExceptions	= true
 database.adapter         	= pdo_mysql
 database.params.host     	= lbohecsdb01
 database.params.username 	= root
-database.params.password 	= My-SQL
+database.params.password 	= ******
 database.params.dbname   	= falcon
-authorizedUsers             	= kbedi,spuleo,kmaqsudi,kschlosser,mcasewell,apope,soneil,droman,gmcquillan
+authorizedUsers             	= comma,separated,list,of,users
