new mac branch commit

--- a/config/falcon.ini
+++ b/config/falcon.ini
@@ -1,5 +1,5 @@
 application.name		= falcon
-application.live_folder		= 
+application.live_folder		= / 
 application.host		= falcon
 application.path		= /var/www/lamp_root/zend_apps/
 application.errorReporting	= E_ALL|E_STRICT
