--- a/config/falcon.ini
+++ b/config/falcon.ini
@@ -8,7 +8,7 @@ application.displayErrors	= 1
 application.timezone		= EST
 application->throwExceptions	= true
 database.adapter         	= pdo_mysql
-database.params.host     	= lbohecsdb01
+database.params.host     	= servername
 database.params.username 	= root
 database.params.password 	= ******
 database.params.dbname   	= falcon
